force-app/main/default/objects/Lead/fields/Company_Growth_Status__c.field-meta.xml
<CustomField>
    <fullName>Company_Growth_Status__c</fullName>
    <description>Quick strategic classification of the company based on its current stage of market development and needs.</description>
    <label>Company Growth Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start-up / Beginning</fullName>
            </value>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>Rapid Growth</fullName>
            </value>
            <value>
                <fullName>Critical Need</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>