force-app/main/default/objects/Lead/fields/Publicly_Traded__c.field-meta.xml
<CustomField>
    <fullName>Publicly_Traded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the potential client is a public company listed on any stock exchange.</description>
    <label>Publicly Traded</label>
    <type>Checkbox</type>
</CustomField>