force-app/main/default/objects/Lead/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <description>Date that indicates when the client wants to obtain the results of the cooperation.</description>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>