force-app/main/default/objects/Lead/validationRules/Phone_Or_Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Or_Email_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Phone), ISBLANK(Email))</errorConditionFormula>
    <errorMessage>You must enter either a phone number or an email address.</errorMessage>
</ValidationRule>