force-app/main/default/objects/Lead/listViews/AMER_Sales_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>AMER_Sales_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>EMEA Lead Queue</label>
    <queue>EMEA_Lead_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>