force-app/main/default/objects/Lead/listViews/ANZ_Sales_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>ANZ_Sales_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>ANZ Lead Queue</label>
    <queue>ANZ_Lead_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>