force-app/main/default/objects/Lead/listViews/APAC_Sales_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>APAC_Sales_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC Lead Queue</label>
    <queue>APAC_Lead_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>