force-app/main/default/objects/Lead/listViews/LATAM_Sales_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>LATAM_Sales_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>LATAM Lead Queue</label>
    <queue>LATAM_Lead_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>