force-app/main/default/objects/Lead/listViews/NA_Sales_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>NA_Sales_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>NA Lead Queue</label>
    <queue>NA_Lead_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>